--- a/calculator.html
+++ b/calculator.html
@@ -10,44 +10,54 @@
       height: 100vh;
       justify-content: center;
       align-items: center;
-      background: #f4f4f4;
+      margin: 0;
+      background: linear-gradient(135deg, #896fa5 0%, #4983e3 100%);
     }
 
     .calculator {
-      background: white;
-      padding: 20px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 1.5rem;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+      max-width: 95%;
+      width: 350px;
     }
 
     #display {
       width: 100%;
-      padding: 10px;
-      font-size: 24px;
+      box-sizing: border-box;
+      padding: 15px;
+      font-size: 1.5rem;
       text-align: right;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       border: 1px solid #ccc;
       border-radius: 5px;
+      background: #f8f9fa;
     }
 
     .buttons {
       display: grid;
-      grid-template-columns: repeat(4, 70px);
+      grid-template-columns: repeat(4, 1fr);
       gap: 10px;
     }
 
     button {
-      padding: 15px;
-      font-size: 18px;
+      padding: 15px 0;
+      font-size: 1.2rem;
       cursor: pointer;
       border: none;
       background: #eee;
       border-radius: 5px;
-      transition: background 0.2s;
+      transition: all 0.2s;
     }
 
     button:hover {
       background: #ddd;
+      transform: translateY(-2px);
+    }
+
+    button:active {
+      transform: translateY(1px);
     }
 
     .operator {
@@ -63,6 +73,35 @@
       background: #f94144;
       color: white;
       grid-column: span 2;
+    }
+
+    /* Responsive design */
+    @media (max-width: 480px) {
+      .calculator {
+        width: 90%;
+        padding: 1rem;
+      }
+
+      button {
+        padding: 12px 0;
+        font-size: 1rem;
+      }
+
+      #display {
+        font-size: 1.2rem;
+        padding: 10px;
+      }
+    }
+
+    @media (max-width: 320px) {
+      .buttons {
+        gap: 5px;
+      }
+
+      button {
+        padding: 10px 0;
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
@@ -97,7 +136,7 @@
   </div>
 
   <script>
-  
+
    function append(value){
 
     const display = document.getElementById('display');
@@ -111,7 +150,7 @@
         try {
             display.value = eval(display.value);
         } catch  {
-            display.valu = 'Error';
+            display.value = 'Error';
         }
     }
 
@@ -119,7 +158,7 @@
         const display = document.getElementById('display');
         display.value = '';
     }
-   
+
 
   </script>
 
